# socketscout

./: .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  styles.css  test_server.py  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  MessageApp.tsx  data.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  commands.rs  connections.rs  database.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/actors/: mod.rs  reader.rs  state.rs
src/api/: status.tsx
src/chat-messages/: index.ts  message-bubble.tsx  message-input.tsx  message-panel-header.tsx  message-panel.tsx  no-messages-warn.tsx
src/chat-panel/: chat-list-item.tsx  chat-list.tsx  chat-panel.tsx  index.ts  new-chat.tsx
src/components/: AddConnection.tsx  ChatBubble.tsx  ChatListItem.tsx  ConnectionList.tsx  Connections.tsx  ConnectionsPane.tsx  MessageApp.tsx  MessagesPane.tsx  MyMessages.tsx  Title.tsx  add-conversation.tsx  conversation-list.tsx  conversations-header.tsx  conversations-list.tsx  messages-container.tsx  messages-header.tsx  messages-input.tsx  mobile-drawer.tsx  mock-data.ts  types.tsx
src/components/icons/: chat-no-found.tsx  confused-person.tsx
src/components/styled/: index.ts
src/components/ui/chat/: ChatBubble.tsx  ChatListItem.tsx  ChatsPane.tsx  bubble.tsx  chat-new.tsx  index.tsx  list-item.tsx  new.tsx  pane.tsx
src/components/ui/input/: MessageInput.tsx
src/components/ui/messages/: MessageInput.tsx  (+6 more)
src/data/: data.tsx
src/stores/: atoms.tsx
src/styled/: index.ts
src/types/: types.ts  types.tsx
