[package]
name = "socketscout"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "socketscout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
tauri-plugin-log = "2.2.1"
# Serialization 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
# WebSocket
tokio-tungstenite = "0.26.1"
futures = "0.3.31"
anyhow = "1.0.95"
# Async
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
kameo = "0.14.0"
# Tools
log = "0.4.25"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
